# fullcycle_mba_ddd_project

./: .gitignore  main.py  pyproject.toml
src/common/domain/: aggregate_root.py  entity.py
src/common/domain/value_objects/: cpf_vo.py  name_vo.py  name_vo_test.py  uuid_vo.py  value_objects.py
src/domain/entities/: customer_entity.py
src/events/domain/entities/: customer_entity.py
tests/domain/: cpf_value_objects_test.py  customer_entity_test.py  name_value_objects_test_.py  uuid_vo_test.py  value_objects_test.py
